--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,7 +120,9 @@
     for (var i = 0; i < players.length; i++) {
 
         var p = players[i];
-        p.style.width = (sw - 2 * padding) + "px";
+        var pw = sw - 2 * padding;
+        p.style.width = pw + "px";
+        p.style.height = pw * 0.6 + "px";
     }
 </script>
 </body>
