--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,10 +125,10 @@
         p.style.height = pw * 0.6 + "px";
     }
 
-    var imgUrl = "图片地址";
-    var lineLink = "网址";
+    var imgUrl = "https://sfault-avatar.b0.upaiyun.com/906/345/906345844-54f0133390e13_big64";
+    var lineLink = "http://www.futureaction.cn/report_data/20160607/zhangjianglin";
     var descContent = '爱写什么写什么';
-    var shareTitle = '爱写什么写什么';
+    var shareTitle = '运动能力报告';
     var appid = '';
 
     function shareFriend() {
