--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,6 +112,7 @@
         </section>
     </article>
 </div>
+<img src="/images/icon.jpg" style="position:absolute;top:-2000px;width:200px;height:200px;s"/>
 <script>
     var sw = window.screen.width;
     var players = document.querySelectorAll('.video-player');
@@ -124,61 +125,6 @@
         p.style.width = pw + "px";
         p.style.height = pw * 0.6 + "px";
     }
-
-    var imgUrl = "https://sfault-avatar.b0.upaiyun.com/906/345/906345844-54f0133390e13_big64";
-    var lineLink = "http://www.futureaction.cn/report_data/20160607/zhangjianglin";
-    var descContent = '爱写什么写什么';
-    var shareTitle = '运动能力报告';
-    var appid = '';
-
-    function shareFriend() {
-        WeixinJSBridge.invoke('sendAppMessage', {
-            "appid": appid,
-            "img_url": imgUrl,
-            "img_width": "200",
-            "img_height": "200",
-            "link": lineLink,
-            "desc": descContent,
-            "title": shareTitle
-        }, function (res) {
-            //_report('send_msg', res.err_msg);
-        })
-    }
-    function shareTimeline() {
-        WeixinJSBridge.invoke('shareTimeline', {
-            "img_url": imgUrl,
-            "img_width": "200",
-            "img_height": "200",
-            "link": lineLink,
-            "desc": descContent,
-            "title": shareTitle
-        }, function (res) {
-            //_report('timeline', res.err_msg);
-        });
-    }
-    function shareWeibo() {
-        WeixinJSBridge.invoke('shareWeibo', {
-            "content": descContent,
-            "url": lineLink
-        }, function (res) {
-            //_report('weibo', res.err_msg);
-        });
-    }
-    // 当微信内置浏览器完成内部初始化后会触发WeixinJSBridgeReady事件。
-    document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
-        // 发送给好友
-        WeixinJSBridge.on('menu:share:appmessage', function (argv) {
-            shareFriend();
-        });
-        // 分享到朋友圈
-        WeixinJSBridge.on('menu:share:timeline', function (argv) {
-            shareTimeline();
-        });
-        // 分享到微博
-        WeixinJSBridge.on('menu:share:weibo', function (argv) {
-            shareWeibo();
-        });
-    }, false);
 </script>
 </body>
 </html>
