--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,7 +112,7 @@
         </section>
     </article>
 </div>
-<img src="/images/icon.jpg" style="position:absolute;top:-2000px;width:200px;height:200px;s"/>
+<img src="/images/icon.jpg" style="position:absolute;top:-2000px;width:200px;height:200px;"/>
 <script>
     var sw = window.screen.width;
     var players = document.querySelectorAll('.video-player');
