--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title><%= title %></title>
-    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="icon" href="/images/icon.jpg" type="image/x-icon"/>
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
 </head>
@@ -112,7 +113,7 @@
         </section>
     </article>
 </div>
-<img src="/images/icon.jpg" style="position:absolute;top:-2000px;width:200px;height:200px;"/>
+<img src="/images/icon.jpg" style="position:absolute;top:-2000px;width:500px;height:500px;"/>
 <script>
     var sw = window.screen.width;
     var players = document.querySelectorAll('.video-player');
