--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title><%= title %></title>
     <link rel="icon" href="/images/icon.jpg" type="image/x-icon"/>
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/bootstrap-3.3.5-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
 </head>
