--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,7 +113,7 @@
         </section>
     </article>
 </div>
-<img src="/images/icon.jpg" style="position:absolute;top:-2000px;width:500px;height:500px;"/>
+<img src="/images/51.pic.jpg" style="position:absolute;top:-2000px;width:500px;height:500px;"/>
 <script>
     var sw = window.screen.width;
     var players = document.querySelectorAll('.video-player');
