--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title><%= title %></title>
-    <link rel="icon" href="/images/icon.jpg" type="image/x-icon"/>
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="/stylesheets/bootstrap-3.3.5-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
@@ -113,7 +113,7 @@
         </section>
     </article>
 </div>
-<img src="/images/51.pic.jpg" style="position:absolute;top:-2000px;width:500px;height:500px;"/>
+<img src="/images/wxshare.jpg" style="position:absolute;top:-2000px;width:500px;height:500px;"/>
 <script>
     var sw = window.screen.width;
     var players = document.querySelectorAll('.video-player');
